--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,30 +1,40 @@
 pipeline {
-    agent {
-        docker {
-            image 'maven:3.9.0'
-            args '-v /root/.m2:/root/.m2'
-        }
+    agent { label 'Jenkins-Agent' }
+    tools {
+        jdk 'Java17'
+        maven 'Maven3'
     }
     stages {
-        stage('Build') {
+        stage('cleanworkspace') {
             steps {
-                sh 'mvn -B -DskipTests clean package'
+                cleanWs()
             }
         }
-        stage('Test') {
+        
+        stage('checkout') {
+            steps {
+                
+               checkout scmGit(branches: [[name: '*/master']], extensions: [], userRemoteConfigs: [[credentialsId: 'github', url: 'https://github.com/johnpup/simple-java-maven-app']])
+            }
+            
+        }
+        
+        stage('build') {
+            steps {
+                sh 'mvn clean package'
+            }
+            
+        }
+        
+        stage('test') {
             steps {
                 sh 'mvn test'
             }
-            post {
-                always {
-                    junit 'target/surefire-reports/*.xml'
-                }
-            }
-        }
-        stage('Deliver') {
-            steps {
-                sh './jenkins/scripts/deliver.sh'
-            }
+            
+            
         }
     }
 }
+
+               
+                
